# truenas-api-conduit

./: .dockerignore  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  server-stats.sh
config/: config.toml
docs/: docs.md
notes/: about_pydantic_errors.md
plans/: OS_services.md  todo.md
src/truenas_api_conduit/: __init__.py  __main__.py  api_requests.py  app_globals.py  cheatsheet.py  cli.py  cli_helpers.py  cli_options_class.py  config.toml  console.py  constants.py  daemon.py  errors.py  i18n.py  log_setup.py  main.py  request_helper.py  settings.conf  settings.toml  setup_app_dir.py  user_config.py
src/truenas_api_conduit/cli/: __init__.py  __main__.py  cli_helpers.py  config_setup.py  helps.py  request_helper.py
src/truenas_api_conduit/config/: __init__.py  crypt_key.py  file_encrypter.py  keyring_backends.py  keyring_source.py  pydantic_sources.py  settings.toml  user_config.py
src/truenas_api_conduit/core/: __init__.py  __main__.py  api_requests.py  conduit.py  config_setup.py  conn_diag.py  detect_platform.py  endpoints.py  global_enums.py  helper_funcs.py  log_setup.py  msg_receiver.py  os_error.py  read_lockfile.py  setup_app_dir.py  unlocker.py  ws_client.py
src/truenas_api_conduit/os_service/: __init__.py  base.py  linux.py  macos.py  windows.py
src/truenas_api_conduit/service/: __init__.py  base.py  linux.py  macos.py  windows.py
tests/: test_basic.py
